App root styling

--- a/src/app/app.module.scss
+++ b/src/app/app.module.scss
@@ -1,1 +1,9 @@
 /* Your styles goes here. */
+
+.toward {
+  border: 1px solid #000;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 10px;
+}
