--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+.toward {
+  .todoItem {
+    &:first-of-type h2 {
+      margin-top: 0;
+    }
+  }
+}
