--- a/src/components/TodoInput/TodoInput.module.scss
+++ b/src/components/TodoInput/TodoInput.module.scss
@@ -5,3 +5,28 @@
  * .container {
  * }
 */
+
+.container {
+  border-top: 1px solid #000;
+  margin-top: 10px;
+  padding: 10px;
+
+  h3 {
+    margin-top: 0;
+  }
+
+  button {
+    margin-bottom: 10px;
+    float: right;
+  }
+
+  input,
+  textarea {
+    width: 100%;
+  }
+  input {
+    &[type='text'] {
+      margin-bottom: 10px;
+    }
+  }
+}
