--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -6,6 +6,14 @@
  * }
 */
 
+.container {
+  padding: 10px;
+  border-top: 1px solid #000;
+  h2 {
+    margin-top: 0;
+  }
+}
+
 .completed {
   h2 {
     text-decoration: line-through;
