--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
+body {
+  background-color: #3b3b3b;
+}
+
 .toward {
+  background-color: #fff;
+
   * {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
